configure nodemon, and tsc watch

--- a/ts_learn/package.json
+++ b/ts_learn/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "dev" : "npx concurrently -k -n COMPILER,NODEMON -c red,blue \"tsc -w\" \"nodemon -w dist -q dist/index.js\""
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "concurrently": "^5.2.0",
+    "nodemon": "^2.0.4",
     "typescript": "^3.9.5"
   }
 }
