--- a/ts_learn/tsconfig.json
+++ b/ts_learn/tsconfig.json
@@ -4,7 +4,8 @@
     "module": "commonjs",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */
     "jsx": "react",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
     "outDir": "dist",                       /* Concatenate and emit output to single file. */
-    "strict": true,                           /* Enable all strict type-checking options. */
+    "strict": true,       
+    "strictNullChecks": true,                    /* Enable all strict type-checking options. */
     "esModuleInterop": true,                  /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
     "skipLibCheck": true,                     /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
