--- a/ts_learn/package.json
+++ b/ts_learn/package.json
@@ -15,5 +15,8 @@
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.4",
     "typescript": "^3.9.5"
+  },
+  "dependencies": {
+    "next": "^9.4.4"
   }
 }
